--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head> </head>
   <body>
     Chat Application
+
+    <form id="message-form">
+      <input id="message" placeholder="Enter your message." />
+      <button id="send">SEND</button>
+    </form>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
