Added Geolocation API

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       <input id="message" placeholder="Enter your message." />
       <button id="send">SEND</button>
     </form>
+    <button id="share-location">SHARE LOCATION</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
